add API Web to code

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-dataclasses
+dataclasses~=0.6
 dataclasses-json~=0.6.3
 selenium~=4.17.2
-PyYAML
+PyYAML~=6.0.1
 chromedriver-autoinstaller
-PyQt5
+PyQt5~=5.15.9
 currencies
-pandas
+pandas~=2.2.1
 openpyxl
 pyqt-checkbox-list-widget
-PyInstaller
+PyInstaller~=6.6.0
 pywin32
+pytz~=2024.1
+requests~=2.31.0
